--- a/moviesApp/src/main/res/layout/fragment_movie_detail.xml
+++ b/moviesApp/src/main/res/layout/fragment_movie_detail.xml
@@ -1,14 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context=".view.MovieDetailFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_detail_fragment" />
+    <ImageView
+        android:scaleType="center"
+        android:minHeight="200dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/moviePoster"
+        />
 
-</FrameLayout>
+    <TextView
+        android:text="@string/app_name"
+        android:layout_margin="@dimen/dp_04"
+        style="@style/Title"
+        android:id="@+id/movieTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:layout_margin="@dimen/dp_04"
+        style="@style/Title"
+        android:text="@string/original_language"
+        android:id="@+id/movieLanguage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+</LinearLayout>
