--- a/moviesApp/src/main/res/navigation/nav_movies_graph.xml
+++ b/moviesApp/src/main/res/navigation/nav_movies_graph.xml
@@ -22,5 +22,9 @@
         <action
             android:id="@+id/action_movieDetailFragment_to_movieListFragment"
             app:destination="@id/movieListFragment" />
+        <argument
+            android:name="results"
+            app:argType="com.newstudies.androidtutorials.model.Results"
+            app:nullable="true" />
     </fragment>
 </navigation>
