--- a/moviesApp/src/main/res/values/dimens.xml
+++ b/moviesApp/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="sp_18">18sp</dimen>
     <dimen name="sp_14">14sp</dimen>
+    <dimen name="dp_04">04dp</dimen>
 </resources>
