--- a/moviesApp/src/main/res/layout/item_movie.xml
+++ b/moviesApp/src/main/res/layout/item_movie.xml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+        <variable
+            name="results"
+            type="com.newstudies.androidtutorials.model.Results" />
+        <variable
+            name="listener"
+            type="com.newstudies.androidtutorials.view.MovieClickListener" />
+    </data>
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:id="@+id/movieLayout"
+    android:tag="@{results.title}"
+    android:onClick="@{listener::onClick}"
     android:layout_height="wrap_content">
 
     <ImageView
@@ -12,6 +24,7 @@
         android:id="@+id/imageMoviePortrait2"
         android:layout_width="wrap_content"
         android:layout_height="120dp"
+        android:imageUrl="@{results.posterImage}"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -19,16 +32,16 @@
         android:contentDescription="@string/hello_detail_fragment" />
 
     <TextView
-        android:id="@+id/textMovieName2"
         style="@style/Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#AFFF"
         android:gravity="center"
         android:padding="4dp"
-        android:text="@string/movie_name"
+        android:text="@{results.title}"
         app:layout_constraintBottom_toBottomOf="@id/imageMoviePortrait2"
         app:layout_constraintEnd_toEndOf="@id/imageMoviePortrait2"
         app:layout_constraintStart_toStartOf="@id/imageMoviePortrait2"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
